# seedbox-mover

./: .flake8  .gitignore  README.md  mover.py  noxfile.py  pyproject.toml  radarr.py  rtorrent.py
src/: mover.py  movie.py  radarr.py  rtorrent.py  util.py
