[tool.poetry]
name = "mover"
version = "0.1.0"
description = "custom torrent automation script "
authors = ["Alex Bierwagen <me@alexb.io>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.23.0"
python-dateutil = "^2.8.1"
environs = "^8.0.0"
click = "^8.0.1"

[tool.poetry.dev-dependencies]
black = {version = "^19.10b0", allow-prereleases = true}
flake8 = "^3.8.2"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.0"
flake8-import-order = "^0.18.1"
mypy = "^0.770"
nox = "^2020.5.24"
flake8-docstrings = "^1.5.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
